manifests/sonarqube/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: sonarqube      
  labels:
    app: postgres
  name: postgres
spec:
  serviceName: postgres       
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:12
        name: postgres
        resources:
          requests:
             cpu: 128m
             memory: 256Mi
          limits:
             cpu: 1
             memory: 1Gi
        volumeMounts:
           - name: postgres-data
             mountPath: /var/lib/postgresql/data
      
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
             claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: sonarqube
spec:
  selector:
    app: postgres
  ports:
    - name: postgres-port
      port: 5432
      protocol: TCP
      targetPort: 5432
