manifests/sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
    - host: example.com
      http:
        paths:
        - path: /sonar
          pathType: ImplementationSpecific
          backend:
            service:
              name: sonarqube-svc
              port:
                number: 80
